--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
+    "@types/react-scroll": "^1.8.9",
     "babel-jest": "27.4.2",
     "babel-loader": "8.2.3",
     "babel-plugin-named-asset-import": "0.3.8",
@@ -33,6 +34,7 @@
     "fs-extra": "10.0.0",
     "gh-pages": "^6.0.0",
     "html-webpack-plugin": "5.5.0",
+    "i": "^0.3.7",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.4.3",
     "jest-resolve": "27.4.2",
@@ -45,10 +47,14 @@
     "postcss-preset-env": "7.0.1",
     "prompts": "2.4.2",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
+    "react-parallax-tilt": "^1.7.172",
     "react-refresh": "0.11.0",
+    "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
     "resolve": "1.20.0",
     "resolve-url-loader": "4.0.0",
     "sass-loader": "12.3.0",
@@ -58,7 +64,9 @@
     "styled-components": "5.3.6",
     "tailwindcss": "3.0.2",
     "terser-webpack-plugin": "5.2.5",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "4.4.2",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "2.1.0",
     "webpack": "5.64.4",
     "webpack-dev-server": "4.6.0",
